# gnustep-audit

./: .gitignore  README.md  env.sh
docs/: AUDIT-SUMMARY.md  gnustep-audit-workplan.md  phase1-libobjc2-findings.md  phase2-libs-base-findings.md  phase3-libs-corebase-findings.md  phase4-graphics-findings.md  phase5-ui-layer-findings.md  phase6-optimization-deep-dive.md  reviewer-feedback-2026-04-13.md
docs/oracle/: 2026-07-19-nsview-geometry.md
docs/spikes/: 2026-04-13-dtable-cache-line.md  2026-04-13-glyph-caching.md  2026-04-13-gs-small-dictionary-addendum.md  2026-04-13-gs-small-dictionary.md  2026-04-13-nszone-removal.md  2026-04-13-per-class-cache-version-addendum.md  2026-04-13-per-class-cache-version.md  2026-04-13-pool-page-recycling.md  2026-04-13-tagged-pointer-nsstring-addendum.md  2026-04-13-tagged-pointer-nsstring.md  2026-07-18-libs-gui-headless-render.md  2026-07-18-libs-gui-tierc-capture.md
docs/superpowers/plans/: 2026-04-12-fix-graphics.md  2026-04-12-fix-libobjc2.md  2026-04-12-fix-libs-base.md  2026-04-12-fix-libs-corebase.md  2026-04-12-fix-ui-layer.md  2026-04-12-gnustep-fix-all-master.md  2026-04-12-instrumentation.md  2026-04-12-perf-optimization.md  2026-04-12-phase6-followup.md  2026-07-18-libs-gui-headless-harness-0b.md  2026-07-18-libs-gui-headless-harness-spike.md  2026-07-19-nsview-geometry-audit.md
docs/superpowers/specs/: 2026-07-18-libs-gui-heavy-class-testing-design.md  2026-07-19-libs-gui-nsview-geometry-audit-design.md
instrumentation/: Makefile  README.md  capture_baseline.sh  compare_results.py  experiment-log.md
instrumentation/benchmarks/: CMakeLists.txt  GNUmakefile  bench_autorelease.m  bench_cfarray_append.m  bench_dict_create.m  bench_dict_lookup.m  bench_image_draw.m  bench_json_parse.m  bench_kvc_cache_storm.m  bench_msg_send.m  bench_nscache.m  bench_retain_release.m  bench_runloop_timers.m  bench_scroll.m  bench_string_hash.m  bench_view_invalidation.m  bench_weak_ref.m
instrumentation/benchmarks/results/: baseline-2026-04-12.json  baseline.jsonl  baseline_no_tiny.jsonl  baseline_post_b51.jsonl  baseline_pre_b1.jsonl  baseline_pre_b51.jsonl  baseline_pre_b6.jsonl  baseline_tiny.jsonl
instrumentation/common/: bench_harness.c  bench_harness.h  test_utils.h
instrumentation/tests/libobjc2/: GNUmakefile  test_arc_thread_safety.m  test_category_order.m  test_class_table_race.m  test_null_selector.m  test_protocol_null.m  test_rethrow_uaf.m  test_selector_race.m  test_spinlock_deadlock.m  test_strong_null.m  test_type_qualifiers.m  test_weak_ref_stress.m
instrumentation/tests/libs-back/: GNUmakefile  test_gdi_leak.m  test_headless_lifecycle.m  test_window_map_race.m
instrumentation/tests/libs-base/: GNUmakefile  test_archive_bounds.m  test_gs_inline_dict.m  test_gs_tiny_string.m  test_json_depth.m  test_json_numbers.m  test_method_sig.m  test_nsoperation_kvo.m  test_nsthread_cancel.m  test_plist_overflow.m  test_pool_thread.m  test_secure_coding.m  test_symlink_loop.m  test_tls_default.m  test_zone_oom.m
instrumentation/tests/libs-corebase/: GNUmakefile  test_cfarray_growth.m  test_cfplist_deepcopy.m  test_cfrunloop_atomic.m  test_cfsocket_addr.m  test_cfsocket_send.m  test_cfstring_surrogate.m  test_nscfdict_enum.m  test_nscfstring_recurse.m
instrumentation/tests/libs-gui/: GNUmakefile  test_app_main_thread.m  test_focus_exception.m  test_image_concurrent.m  test_nib_missing_class.m  test_view_geometry.m  test_view_subview_race.m
instrumentation/tests/libs-opal/: GNUmakefile  test_cgcontext_null.m  test_dash_buffer.m  test_gstate_underflow.m  (+3 more)
(+6 files in other folders)
